--- a/proyF/project2/sistemaDeMatriculas/registro/templates/estudiantes.html
+++ b/proyF/project2/sistemaDeMatriculas/registro/templates/estudiantes.html
@@ -12,13 +12,19 @@
             <div class="card-body">
                 <form action="/registrarEstudiante/" method="POST">{% csrf_token %}
                     <div class="form-group">
-                        <input type="text" id="txtNombre" name="txtNombre" class="form-control" placeholder="Nombre" minlength="" maxlength="50" required>
+                        <input type="text" id="username" name="username" class="form-control" placeholder="Nombre de usuario" required>
                     </div>
                     <div class="form-group">
-                        <input type="text" id="txtCodigo" name="txtCodigo" class="form-control" placeholder="Codigo" minlength="6" maxlength="6" required>
+                        <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required>
                     </div>
                     <div class="form-group">
-                        <input type="text" id="numCreditos" name="numCreditos" class="form-control" placeholder="Creditos"  min="3" max="50" required>
+                        <input type="text" id="codigo" name="codigo" class="form-control" placeholder="Código" minlength="6" maxlength="6" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" id="nombre" name="nombre" class="form-control" placeholder="Nombre" maxlength="50" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="number" id="creditos" name="creditos" class="form-control" placeholder="Créditos" min="3" max="50" required>
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-success btn-block text-white">Guardar</button>
