--- a/proyF/onlyDjango/project2/sistemaDeMatriculas/registro/templates/registration/login.html
+++ b/proyF/onlyDjango/project2/sistemaDeMatriculas/registro/templates/registration/login.html
@@ -3,19 +3,24 @@
 {% block title %} Login {% endblock %}
 
 {% block body %}
-<div class="container">
-    <h1 class="my-4">Login</h1>
-    <form method="post" action="{% url 'login' %}">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="{{ form.username.id_for_label }}" class="form-label">Username</label>
-            {{ form.username }}
+<div class="container d-flex justify-content-center align-items-center min-vh-100">
+    <div class="card shadow p-4 bg-dark" style="width: 22rem;">
+        <div class="card-body text-center">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/020/788/814/small_2x/icon-symbol-or-website-admin-social-login-element-concept-3d-rendering-png.png" class="img-fluid mb-3" alt="Login Icon">
+            <h1 class="h3 mb-3 text-white">Login</h1>
+            <form method="post" action="{% url 'login' %}">
+                {% csrf_token %}
+                <div class="form-group mb-3">
+                    <label for="{{ form.username.id_for_label }}" class="form-label">Username</label>
+                    {{ form.username }}
+                </div>
+                <div class="form-group mb-3">
+                    <label for="{{ form.password.id_for_label }}" class="form-label">Password</label>
+                    {{ form.password }}
+                </div>
+                <button type="submit" class="btn btn-custom w-100">Login</button>
+            </form>
         </div>
-        <div class="form-group">
-            <label for="{{ form.password.id_for_label }}" class="form-label">Password</label>
-            {{ form.password }}
-        </div>
-        <button type="submit" class="btn btn-custom">Login</button>
-    </form>
+    </div>
 </div>
 {% endblock %}
